# pytest-enabler

./: CHANGES.rst  NEWS.rst  README.rst  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: conf.py  index.rst
newsfragments/: +25f7271e.bugfix.rst  +319cc5ca.bugfix.rst  +4e04301e.feature.rst  +5807f346.feature.rst  +712aa67a.feature.rst  +b2413006.feature.rst  12.removal.rst  13.removal.rst  19.feature.rst  20.feature.rst  8.bugfix.rst
pytest_enabler/: __init__.py  default.toml
tests/: test_enabler.py
