[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true

[tool.setuptools_scm]

# jaraco/skeleton#22
[pytest.enabler.black]
addopts = "--black"

# jaraco/skeleton#22
[pytest.enabler.mypy]
addopts = "--mypy"

[pytest.enabler.flake8]
addopts = "--flake8"

[pytest.enabler.cov]
addopts = "--cov"
